--- a/zoon_player/pubspec.yaml
+++ b/zoon_player/pubspec.yaml
@@ -29,7 +29,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   flutter_svg: ^0.19.3
   auto_size_text: ^2.1.0
-  google_fonts: ^1.1.2
+  tuple: ^1.0.3
+  just_audio: 0.6.15+1
+  flutter_audio_query: ^0.3.5+6
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
