--- a/zoon_player/pubspec.yaml
+++ b/zoon_player/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   provider: ^5.0.0
   awesome_dialog: ^1.3.2
   podcast_search: ^0.3.9
-
+  rxdart: ^0.24.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
