--- a/zoon_player/pubspec.yaml
+++ b/zoon_player/pubspec.yaml
@@ -18,24 +18,22 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.10.0 <3.0.0"
 
 dependencies:
+  auto_size_text: ^2.1.0
+  awesome_dialog: ^2.0.0
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  flutter_svg: ^0.19.3
-  auto_size_text: ^2.1.0
-  tuple: ^1.0.3
-  just_audio: 0.6.15+1
-  flutter_audio_query: ^0.3.5+6
+  flutter_svg: ^0.22.0
+  google_fonts: ^2.1.0
+  podcast_search: ^0.4.0
   provider: ^5.0.0
-  awesome_dialog: ^1.3.2
-  podcast_search: ^0.3.9
-  rxdart: ^0.24.1
+  rxdart: ^0.27.0
+  tuple: ^2.0.0
+
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
