--- a/zn/pubspec.yaml
+++ b/zn/pubspec.yaml
@@ -14,12 +14,18 @@ dependencies:
   flutter_bloc: ^8.1.1
   flutter_localizations:
     sdk: flutter
+  freezed: ^2.1.0+1
+  go_router: ^5.0.1
+  hydrated_bloc: ^8.1.0
   intl: ^0.17.0
 
 dev_dependencies:
   bloc_test: ^9.1.0
+  build_runner: ^2.2.1
   flutter_test:
     sdk: flutter
+  freezed_annotation: ^2.1.0
+  go_router_builder: ^1.0.14
   mocktail: ^0.3.0
   very_good_analysis: ^3.0.2
 
