--- a/zn/.vscode/launch.json
+++ b/zn/.vscode/launch.json
@@ -5,7 +5,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Launch development",
+      "name": "development",
       "request": "launch",
       "type": "dart",
       "program": "lib/main_development.dart",
@@ -17,14 +17,14 @@
       ]
     },
     {
-      "name": "Launch staging",
+      "name": "staging",
       "request": "launch",
       "type": "dart",
       "program": "lib/main_staging.dart",
       "args": ["--flavor", "staging", "--target", "lib/main_staging.dart"]
     },
     {
-      "name": "Launch production",
+      "name": "production",
       "request": "launch",
       "type": "dart",
       "program": "lib/main_production.dart",
