--- a/zn/pubspec.yaml
+++ b/zn/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   go_router: ^5.0.1
   hydrated_bloc: ^8.1.0
   intl: ^0.17.0
+  path_provider: ^2.0.11
   podcast_search: ^0.5.1
 
 dev_dependencies:
